@@ -68,6 +68,7 @@ print("\n");
 $cur->sendQuery("drop table testtable");
 
 print("CREATE TEMPTABLE: \n");
+#$con->debugOn();
 checkSuccess($cur->sendQuery("create table testtable (testnumber number, testchar char(40), testvarchar varchar2(40), testdate date, testlong long, testclob clob, testblob blob)"),1);
 print("\n");
 
